<resources>
    <string name="app_name">MGOficina</string>
    <string name="aviso">Aviso!</string>
    <string name="excluido">Excluído!</string>
    <string name="novo">&#160;novo&#160;</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="bem_vindo_ao">Bem vindo ao MGOficina</string>
    <string name="descricao_app">"Total controle das suas ordens de serviço na palma da mão."</string>
    <string name="seus_dados_estarao">Seus dados estarão guardados protegidos em um servidor remoto.</string>
    <string name="esse_e_o_codigo">Esse é o código identificador no sistema, ele é único para cada usuário.</string>
    <string name="deseja_notificar">Deseja notificar o cliente sobre a mudança de situação?</string>
    <string name="mudanca_situacao">Mudança de situação</string>
    <string name="texto_notifica_cliente_1">Prezado cliente</string>
    <string name="texto_notifica_cliente_2">Informo que a Orden de serviço</string>
    <string name="texto_notifica_cliente_3">passou para de</string>
    <string name="texto_notifica_cliente_4">Desde já agradeço!</string>
    <string name="enviar_link">Enviar seu link</string>
    <string name="ver_servidor">Ver servidor</string>
    <string name="link_servidor">Link para visualização das Ordens de serviço</string>
    <string name="modo_envio">Escolha o modo de envio</string>
    <string name="action_settings">Settings</string>
    <string name="definicoes">Definições</string>
    <string name="action_home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="clientes">Clientes</string>
    <string name="action_sair">Sair</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nova">NovaActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="escolha_opcao">Escolha uma opoção</string>
    <string name="action_add">Adicionar OS</string>
    <string name="title_activity_itens_bancada">ItensBancada</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_form_busca">Pesquisa avançada</string>
    <string name="title_activity_single">Detalhes</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="entrada">Entrada</string>
    <string name="enviar_para">Enviar para</string>
    <string name="excluir_item">Excluir item</string>
    <string name="excluir">Excluir</string>
    <string name="selecionar_foto">Selecionar Imagem</string>
    <string name="excluir_foto">Excluir Imagem</string>
    <string name="descricao">Descrição</string>
    <string name="cliente">Cliente</string>
    <string name="cliente_s">Cliente: </string>
    <string name="data_hora">Data/hora: </string>
    <string name="os">Orden de serviço</string>
    <string name="busca_avancada">Busca avançada</string>
    <string name="buscar_em">Pesquisar em:</string>
    <string name="resultado_para">Resultado para</string>
    <string name="palavra_chave">Palavra chave:</string>
    <string name="defeito">Defeito:</string>
    <string name="equipamento">Equipamento</string>
    <string name="dados_adicionais">Dados adicionais</string>
    <string name="salvar">Salvar</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="editar">Editar</string>
    <string name="bancada">Para orçamento:</string>
    <string name="executando">Executando:</string>
    <string name="aguardando">Aguardando:</string>
    <string name="prontos">Prontos:</string>
    <string name="entregues">Entregues:</string>
    <string name="em_lote">Em lote</string>
    <string name="lotes">Lotes</string>
    <string name="lote_n">Lote nº:&#160;</string>
    <string name="lote_data">Fechamento em:&#160;</string>
    <string name="detalhes">Detalhes</string>
    <string name="situacao">Situação</string>
    <string name="nao_itens">Não há itens!</string>
    <string name="vazio">Vazio</string>
    <string name="local">Localização</string>
    <string name="defeito_ed">Defeito</string>
    <string name="acessorios">Acessórios</string>
    <string name="trabalhos">Trabalhos</string>
    <string name="servico">Serviço</string>
    <string name="valor">Valor do orçamento/serviço</string>
    <string name="orden_servico">Ordem de serviço</string>
    <string name="sobre">Sobre</string>
    <string name="obs">Observações</string>
    <string name="info_local">Informe a localização</string>
    <string name="info_valor">Informe o valor</string>
    <string name="valor_lote">Valor do lote:&#160;</string>
    <string name="Title_bancada">Para orçamento</string>
    <string name="Title_executando">Executando</string>
    <string name="Title_aguardando">Aguardar</string>
    <string name="Title_prontos">Prontos</string>
    <string name="Title_entregues">Entregues</string>
    <string name="Title_devolvido">Devolvidos</string>
    <string name="menu">Menu</string>
    <string name="galeria">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="total">Total</string>
    <string name="title_activity_lista_trabalhos">ListaTrabalhosActivity</string>
    <string name="title_activity_nova_os">NovaOsActivity</string>
    <string name="iten_editado">Item Editado para:&#160;</string>
    <string name="email_invalido">email parece ser inválido!</string>
    <string name="aviso_nova_os">OS Adicionada para orçamento!</string>
    <string name="aviso_sair">Você tem certeza que deseja sair?</string>
    <string name="aviso_fechar_lote">Você tem certeza que deseja fechar lote?</string>
    <string name="aviso_sincronizar">Você tem certeza que deseja sincronizar dados?</string>
    <string name="aviso_excluir">Você tem certeza que deseja excluir?</string>
    <string name="envia_bancada">Equipamento enviado para Orçamento com sucesso!</string>
    <string name="envia_aguarda">Equipamento enviado para "Aguardar" com sucesso!</string>
    <string name="envia_pronto">Equipamento enviado para a "Prontos" com sucesso!</string>
    <string name="envia_devolvido">Equipamento enviado para "Devolvido" com sucesso!</string>
    <string name="envia_entregue">Equipamento enviado para a "Entregues" com sucesso!</string>
    <string name="envia_executando">Equipamento enviado para "Executando" com sucesso!</string>
    <string name="aviso_fecha_lote">Ao fechar lote você irá colocar as Ordens de serviço na situação de arquivo. Elas estarão disponíveis somente para leitura e não pederão ser editadas ou excluídas. </string>
    <string name="nao_pode_ser_editada">(Não pode ser editada ou excluída)</string>
    <string name="foto_trocada">Foto substituida com sucesso!</string>
    <string name="ja_cadastrado">já foi cadastrado! Escolha outro.</string>
    <string name="valor_deve">Valor deve ser informado!</string>
    <string name="cliente_deve">Cliente deve ser informado!</string>
    <string name="equipamento_deve">Equipamento deve ser informado!</string>
    <string name="os_deve">OS deve ser informado!</string>
    <string name="aviso_importante">Aviso Importante!</string>
    <string name="voce_e_novo">Você é novo aqui?</string>
    <string name="tenho_conta">Tenho uma conta.</string>
    <string name="nome_conta">Esse nome não é login, ele será apenas um identificador do usuário</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="nao_tenho_conta">Vou começar do zero.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_fecha_lote_exporta">MainActivity</string>
    <string name="title_activity_fechar_lote">FecharLoteActivity</string>
    <string name="fechar_lote">Fechar Lote</string>
    <string name="fechar_lote_andamento">Fechando lote &#8230;</string>
    <string name="fechar_lote_termino">Lote fechado!</string>
    <string name="fechar_lote_sem_dados">Não há dados para Lote!</string>
    <string name="sincronizar">Sincronizar dados</string>
    <string name="sincronizar_andamento">Sincronizando dados &#8230;</string>
    <string name="sincronizar_fechamento">Sincronização terminada!</string>
    <string name="sincronizar_sem_dados">Não há dados para sincronizar!</string>
    <string name="sincronizar_erro">Erro ao sincronizar!</string>
    <string name="sincronizar_erro_alguns">Algun(s) dados não sincronizaram!</string>
    <string name="caixa_entrada">Novos</string>
    <string name="sincronizacao">Sincronização&#160;</string>
    <string name="sincronizado">&#160;Sincronizado&#160;</string>
    <string name="dados">Dados&#160;</string>
    <string name="nao_sincronizados">&#160;Não sincronizados&#160;</string>
    <string name="dados_nao">Dados não sincronizados</string>
    <string name="user_nome">Nome de usuário</string>
    <string name="senha">Senha</string>
    <string name="voce_deve_sinc">Você deve sincronizar os dados com o servidor!</string>
    <string name="re_senha">Confirme a senha</string>
    <string name="digite_senha_velha">Digite a senha atual</string>
    <string name="digite_senha_nova">Digite a nova senha</string>
    <string name="senha_definida">A sua senha foi definida!</string>
    <string name="dados_usuario">Dados do usuário</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="dados_para_uso">Dados para uso do aplicativo</string>
    <string name="dados_info">Informe seu nome e uma senha, para executar as ações do aplicativo.</string>
    <string name="dados_nome_info">Nome que aparecerá para o Administrador caso você esteja subordinado.</string>
    <string name="codigo_acesso">Código do usuário</string>
    <string name="voce_novo">Você é novo por aqui.</string>
    <string name="comecar">Começar</string>
    <string name="primeiros_passos">Primeiros passos</string>
    <string name="deve_preencher">Todos campos dever ser preenchidos!</string>
    <string name="senha_incopativeis">Repita a senha corretamente!</string>
    <string name="digite_senha">Digite a sua senha</string>
    <string name="senha_errada">Senha incorreta!</string>
    <string name="seguranca">Segurança</string>
    <string name="email">E-mail</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="deve_ser_email">Deve ser mesmo email que foi cadastrado ao criar sua conta.</string>
    <string name="sera_enviado_email">Será enviado para o email um código para esta ação.</string>
    <string name="foi_enviado_email">Foi enviado um código para o email:</string>
    <string name="foi_enviado_senha_email">A sua senha foi enviada para o email:</string>
    <string name="erro_enviar_email">Houve um erro ao enviar email! </string>
    <string name="erro_email_existe">Esse email já existe! </string>
    <string name="escolher_outro_email">Escolher outro</string>
    <string name="title_activity_recupera_dados">Recuperar Dados</string>
    <string name="iniciar_recuperacao">Iniciar recuperação</string>
    <string name="ja_tenho_codigo">Já possuo o código</string>
    <string name="enviar_codigo">Enviar o código</string>
    <string name="digite_codigo">Digite o código</string>
    <string name="erro_codigo">Digite o código um código válido!</string>
    <string name="ok">OK</string>
    <string name="contagem">Tipo de contagem</string>
    <string name="manual">Manual</string>
    <string name="automatica">Automática</string>
    <string name="voce_define">Você definine o número das Ordens de serviço manualmente, a cada novo iten.</string>
    <string name="app_define">O aplicativo define a contagem das Ordens de serviço para você.</string>
    <string name="aguarde">Aguarde</string>
    <string name="varsao">Versão</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="eu">Por Emerson Barcellos</string>
</resources>