<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/cinza_claro">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cinza_claro"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="15dp" >
         

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical" >

             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/info_button"
                 android:contentDescription="@string/hello_world"
                  />

             <TextView
                 android:id="@+id/aviso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/voce_novo"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/azul_escuro" />

         </LinearLayout>

         <TextView
             android:id="@+id/erroSenhaAtual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dados_info"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/cinza_escuro" />

<TextView
    android:id="@+id/txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/codigo_acesso"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textStyle="italic"
    android:textColor="@color/azul_escuro" />

         <TextView
             android:id="@+id/txtCodigo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="italic|bold"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/azul_escuro" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/esse_e_o_codigo"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="italic"
             android:textColor="@color/cinza_mais_escuro" />
         
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/cinza_escuro" />

         <TextView
             android:id="@+id/NomeCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/user_nome"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="italic"
             android:textColor="@color/azul_escuro" />

         <EditText
             android:id="@+id/txtNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
             />

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="@string/nome_conta"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/cinza_mais_escuro"
             android:textStyle="italic" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:textStyle="italic"
    android:textColor="@color/azul_escuro" />

         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress" />

         <TextView
             android:id="@+id/nomePerfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/senha"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="italic"
             android:textColor="@color/azul_escuro" />

         <EditText
             android:id="@+id/txtSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="numberPassword" />

         <TextView
             android:id="@+id/enderecoCliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/re_senha"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="italic"
             android:textColor="@color/azul_escuro" />

         <EditText
             android:id="@+id/txtResenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="numberPassword" />
 <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/cinza_escuro" />
<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 <TextView
     android:id="@+id/telefoneCliente"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/contagem"
     android:textAppearance="?android:attr/textAppearanceSmall"
     android:textStyle="italic"
     android:textColor="@color/azul_escuro" />
 
 <RadioGroup
            android:id="@+id/radioGenderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual" 
                android:checked="true"/>

            <TextView
                android:id="@+id/IdCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voce_define"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/cinza_mais_escuro" />

			 <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/cinza" />

			 

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automatica" />

           <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/app_define"
               android:textAppearance="?android:attr/textAppearanceSmall"
               android:textStyle="italic"
               android:textColor="@color/cinza_mais_escuro" />

        </RadioGroup>

 
 <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="@color/cinza_escuro" />

 <LinearLayout
     android:layout_width="278dp"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:id="@+id/carregando" 
     android:visibility="gone">
<ProgressBar
     android:id="@+id/progressBar1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
    <TextView
     android:id="@+id/textView7"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/aguarde"
     android:textAppearance="?android:attr/textAppearanceSmall" />
 </LinearLayout>

 

             <Button
                 android:id="@+id/enviaCodigo"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/radius"
                 android:onClick="criaUser"
                 android:padding="10dp"
                 android:text="@string/comecar"
                 android:textColor="@color/branco" />
         </LinearLayout>

     </LinearLayout>

</ScrollView>
