<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro"
    android:gravity="center_horizontal|fill_horizontal"
    android:orientation="vertical"
    tools:context=".FormBuscaActivity" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                android:padding="10dp">
            

        <TextView
            android:id="@+id/textViewDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar_em"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cinza_escuro" />

        <RadioGroup
            android:id="@+id/radioGenderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/os" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cliente" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao" />
        </RadioGroup>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/abs__ab_solid_shadow_holo"
            android:padding="10dp" >
       

        <TextView
            android:id="@+id/textViewCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palavra_chave"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/cinza_escuro" />

        <EditText
            android:id="@+id/editBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false" 
            android:selectAllOnFocus="true">

            <requestFocus />
        </EditText>
         </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:background="@color/cinza"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/imageButton1"
            style="@style/Sherlock.__Theme.Light"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:onClick="Buscar"
            android:text="@string/pesquisar" />

    </LinearLayout>

</LinearLayout>
