<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".FecharLoteActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_alert" />

    <TextView
        android:id="@+id/nomePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aviso_importante"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/cinza_escuro" />

    <TextView
        android:id="@+id/txtCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/aviso_fecha_lote"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

       

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="fecharLote"
        android:text="@string/fechar_lote" 
        />

</LinearLayout>